# fullstack-test-task

./: README.md
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 8e1f4765d17b_init_uuid_schema.py
backend/src/: app.py  config.py  database.py  dependencies.py  models.py  repository.py  schemas.py  service.py  tasks.py
backend/tests/: test_api.py
